<resources xmlns:tools="http://schemas.android.com/tools">
    <plurals name="format_seconds_abbreviation">
        <item quantity="one">%d sec</item>
        <item quantity="other">%d secs</item>
    </plurals>
    <plurals name="format_minutes_abbreviation">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <plurals name="format_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="format_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="format_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="format_in_minutes">
        <item quantity="one">in %d minute</item>
        <item quantity="other">in %d minutes</item>
    </plurals>
    <plurals name="format_in_hours">
        <item quantity="one">in %d hour</item>
        <item quantity="other">in %d hours</item>
    </plurals>
    <plurals name="format_in_days">
        <item quantity="one">in %d day</item>
        <item quantity="other">in %d days</item>
    </plurals>
    <plurals name="format_messages">
        <item quantity="one">You have a message</item>
        <item quantity="other">You have %d messages</item>
    </plurals>
    <plurals name="format_paused_in_weeks_ago">
        <item quantity="one">You paused this plan %d week ago</item>
        <item quantity="other">You paused this plan %d weeks ago</item>
    </plurals>
    <plurals name="format_paused_in_days_ago">
        <item quantity="one">You paused this plan %d day ago</item>
        <item quantity="other">You paused this plan %d days ago</item>
    </plurals>
    <string name="app_name">ChatOwl</string>
    <string name="bullet" translatable="false">&#9679;</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="nickname">Nickname</string>
    <string name="checkbox_age_confirmation_message">I confirm I\'m over 16 years old</string>
    <string name="checkbox_terms_of_service_message">I have read and agree to all ChatOwl\nTerms and Conditions and Privacy Policy</string>
    <string name="contact_support_center">Contact Support Center</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="login">Log In</string>
    <string name="login_instructions">Input your email below to receive the access code to your account</string>
    <string name="send_code">Send Code</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="insert_6_digit_code">Insert your 6 digit code below:</string>
    <string name="user_not_found">User not found</string>
    <string name="try_again">Try again</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="empty_email_field_error_message_empty">Email can\'t be empty</string>
    <string name="empty_nickname_field_error_message">Nickname can\'t be empty</string>
    <string name="field_value">Field value</string>
    <string name="format_empty_field_error_message">%s can\'t be empty</string>
    <string name="malformed_email_field_error_message">Please write a valid email address</string>
    <string name="sign_up_confirmation_instructions">Insert your 6 digit code below:</string>
    <string name="sign_up_confirmation_message">We sent your one-time code to</string>
    <string name="logout">Log Out</string>
    <string name="login_confirmation_message">If you have signed up to ChatOwl with %s we have sent you an email with an access code</string>
    <string name="general_placeholder">P+ Nunc ullamcorper consectetur aliquet et varius tortor. Aliquam sit malesuada eget amet, sit. </string>
    <string name="my_messages">My Messages</string>
    <string name="my_therapy_plan_history">My Therapy Plan History</string>
    <string name="my_settings">My Settings</string>
    <string name="about_chat_owl">About ChatOwl</string>
    <string name="app_tour">App Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="crisis_support">Crisis Support</string>
    <string name="chat_with_me">Chat with me</string>
    <string name="first_chat_session_message">Start the assessment to get your therapy plan</string>
    <string name="format_is_almost_over">%s is almost over</string>
    <string name="mandatory">Mandatory</string>
    <string name="suggested">Suggested</string>
    <string name="tag_new">New</string>
    <string name="tag_ongoing">Ongoing</string>
    <string name="finish_mandatory_exercises">Finish mandatory exercises to unlock</string>
    <string name="journey">Journey</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="toolbox">Toolbox</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="i_understand_and_accept">I understand and accept</string>
    <string name="fragment_disclaimer_text_view_title">ChatOwl is not a crisis service</string>
    <string name="contact_us_message_hint">Type the message here…</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="message_can_not_be_empty">Message can\'t be empty</string>
    <string name="email_can_not_be_empty">Email can\'t be empty</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="unexpected_email_error">Unexpected Error Retrieving The Email Preferences</string>
    <string name="contact_us_success_title">Your message was successfully sent</string>
    <string name="contact_us_success_subtitle">Our Support Team will answer as\nsoon as possible</string>
    <string name="no_thanks">No, thanks</string>
    <string name="logout_dialog_title">Are you sure you want to Log out?</string>
    <string name="logout_dialog_body">When you log out all your personal data is removed from this device. You can always log in again later which will restore your data.</string>
    <string name="crisis_support_message">If you or someone you know is in crisis, please go to your closest hospital emergency room or call 911.</string>
    <string name="error_making_call">Couldn\'t perform the call</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use_url">https://www.google.com</string>
    <string name="privacy_policy_url">https://www.google.com</string>
    <string name="no_internet_browser_toast_message">No internet browser found.</string>
    <string name="code_sent">Code sent</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="thank_you">Thank you!</string>
    <string name="feedback_success_subtitle">Your feedback will help us make everybody\'s experience better</string>
    <string name="morning">Morning</string>
    <string name="midday">Midday</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="suggested_activities">Suggested Activities</string>
    <string name="format_good_morning">Good morning,\n%s</string>
    <string name="format_good_day">Good day,\n%s</string>
    <string name="format_good_afternoon">Good afternoon,\n%s</string>
    <string name="format_good_evening">Good evening,\n%s</string>
    <string name="format_good_night">Good night,\n%s</string>
    <string name="format_welcome">Welcome,\n%s</string>
    <string name="format_two_lines" translatable="false">%s\n%s</string>
    <string name="about_text">We believe that everybody has the right to have access to mental health care. And yet, 57%% or 26m of the US-adults with a mental illness are going untreated, and 60%% of youth with depression do not receive any mental health treatment.\n\nChatOwl was created to change this by radically giving everyone access to effective mental health care.\n\nChatOwl has been developed by an international team of clinical psychologists with more than 60 years of experience and is based on key findings of text-based digital pilot programs with more than 15,000 sessions.\n\nChatOwl is effective, affordable, always accessible, stigma and judgmental-free and helps you throughout your Journey to Recovery.</string>
    <string name="copyright_chat_owl">&#169; 2020 ChatOwl Inc</string>
    <string name="chat_owl_about_us_address">201 Spear Street, Suite 1001\nSan Francisco, CA 94105\n+1 888 997–7570</string>
    <string name="chat_owl_website">ChatOwl Website</string>
    <string name="chat_owl_website_url">https://chatowl.com</string>
    <string name="email_this_to_me">Email this to me</string>
    <string name="close">Close</string>
    <string name="check_your_mood">Check your mood</string>
    <string name="create_a_journal_entry">Create a journal entry</string>
    <string name="tools_to_help_you">Tools to Help You</string>
    <string name="this_exercise_is_due">This exercise is due</string>
    <string name="search_hint">Search anything…</string>
    <string name="filter">Filter</string>
    <string name="favorite">Favorite</string>
    <string name="media_colon">Media:</string>
    <string name="audio">Audio</string>
    <string name="image">Image</string>
    <string name="quote">Quote</string>
    <string name="video">Video</string>
    <string name="length_colon">Length:</string>
    <string name="less_than_5_minutes"><![CDATA[< 5 mins]]></string>
    <string name="between_5_and_10_minutes" tools:ignore="TypographyDashes">5 - 10 mins</string>
    <string name="greater_than_10_minutes"><![CDATA[> 10 mins]]></string>
    <string name="inactive">Inactive</string>
    <string name="my_therapy_plan">My Therapy Plan</string>
    <string name="therapy_plan">Therapy Plan</string>
    <string name="format_exercises">%d Exercises</string>
    <string name="plan_paused_today">You paused this plan today</string>
    <string name="plan_placeholder_background_url" translatable="false">https://res.cloudinary.com/dmt6cqcbv/image/upload/v1608660084/chatowl/background_start_plan.png</string>
    <string name="type_colon">Type:</string>
    <string name="time_needed_colon">Time needed:</string>
    <string name="preparation">Preparation</string>
    <string name="played_colon">Played:</string>
    <string name="make_yourself_comfortable">Make yourself comfortable</string>
    <string name="dim_the_lights">Dim the lights</string>
    <string name="use_headphones">Use headphones</string>
    <string name="resume_where_you_left_off">Resume where you left off</string>
    <string name="exercise_completed_message">Well done! You completed this exercise</string>
    <string name="exercise_completed_suggested_exercises">People who watched this video also watched:</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="app_preferences">App Preferences</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="email_preferences">Email Preferences</string>
    <string name="tool_feedback">Tool Feedback</string>
    <string name="tool_feedback_description">Give feedback at the end of exercises</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="restore_purchases_description">Automatically restore all purchases</string>
    <string name="clear_downloads">"Clear downloaded media files "</string>
    <string name="clear_downloads_description">This will remove all downloaded files from your phone</string>
    <string name="plan">Plan</string>
    <string name="information">Information</string>
</resources>