<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">

    <com.chatowl.presentation.common.widgets.MyToolbar
        android:id="@+id/fragment_app_preferences_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:isBackEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:light="true"
        app:showDivider="false"
        app:toolbarTitle="@string/app_preferences" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/fragment_app_preferences_linear_progress_indicator"
        style="@style/ChatOwlLinearProgressIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_app_preferences_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_app_preferences_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--            <com.chatowl.presentation.common.widgets.AppPreferencesItem-->
            <!--                android:id="@+id/fragment_app_preferences_item_my_account"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                app:preferenceDescription="@string/time_slot_definition_description"-->
            <!--                app:preferenceName="@string/time_slot_definition"-->
            <!--                app:showDisclosure="true"-->
            <!--                app:showSwitch="false" />-->

            <com.chatowl.presentation.common.widgets.AppPreferencesItem
                android:id="@+id/fragment_app_preferences_item_tool_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preferenceDescription="@string/tool_feedback_description"
                app:preferenceName="@string/tool_feedback"
                app:showSwitch="true"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/margin_48dp" />

            <com.chatowl.presentation.common.widgets.AppPreferencesItem
                android:id="@+id/fragment_app_preferences_item_restore_purchases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                app:mediumFont="true"
                android:visibility="gone"
                app:preferenceDescription="@string/restore_purchases_description"
                app:preferenceName="@string/restore_purchases" />

            <com.chatowl.presentation.common.widgets.AppPreferencesItem
                android:id="@+id/fragment_app_preferences_item_clear_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_2dp"
                android:textColor="@color/red"
                app:mediumFont="true"
                app:preferenceDescription="@string/clear_downloads_description"
                app:preferenceName="@string/clear_downloads" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>