<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_about_us_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_about_us_toolbar_logo"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/ChatOwlTitleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/about_chat_owl"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_about_us_text_view_body"
                style="@style/ChatOwlTextViewStyle.Smallish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="3sp"
                android:text="@string/about_text" />

            <TextView
                style="@style/ChatOwlTextViewStyle.Smallish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_60dp"
                android:text="@string/copyright_chat_owl"
                android:textColor="@color/gray10"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />

            <TextView
                style="@style/ChatOwlTextViewStyle.Smallish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center"
                android:lineSpacingExtra="3sp"
                android:text="@string/chat_owl_about_us_address"
                android:textColor="@color/gray10"
                android:textSize="@dimen/text_size_14sp" />

            <Button
                android:id="@+id/fragment_about_us_button_chat_owl_website"
                style="@style/ChatOwlButtonStyle"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_32dp"
                android:text="@string/chat_owl_website" />

            <TextView
                android:id="@+id/fragment_about_us_text_view_terms_and_conditions"
                style="@style/ChatOwlTextViewStyle.Smallish.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:padding="@dimen/padding_8dp"
                android:text="@string/terms_and_conditions" />

            <TextView
                android:id="@+id/fragment_about_us_text_view_privacy_policy"
                style="@style/ChatOwlTextViewStyle.Smallish.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_8dp"
                android:text="@string/privacy_policy" />

            <TextView
                android:id="@+id/fragment_about_us_text_view_email_this"
                style="@style/ChatOwlTextViewStyle.Smallish.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_8dp"
                android:text="@string/email_this_to_me" />

            <TextView
                android:id="@+id/fragment_about_us_version"
                style="@style/ChatOwlTextViewStyle.Smallish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:padding="@dimen/padding_8dp"
                android:textColor="@color/gray10"
                android:textSize="@dimen/text_size_14sp"
                android:text="Ver. " />

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/fragment_about_us_header_image_button_close"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>